--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .cabecalho-imagem{
-    width: 10%;
+    width: 20%;
 }
 
 .cabecalho-lista-item{
@@ -25,12 +25,12 @@ body {
 }
 
 .escola-imagem{
-    width: 25%;
+    width: 50%;
 }
 
 .escola{
     background-image: linear-gradient(#424E61,#16CFF8);
-    color:white;
+    color:;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,7 +38,7 @@ body {
 }
 
 .escola-div-conteudo{
-    width: 35%;
+    width: 45%;
 }
 
 
